syntax = "proto3";

option go_package = "./pb";

message SendPointsRequest {
  uint32 sender_id = 1;
  uint32 recipient_id = 2;
  float points_amount =3;
}

message SendPointsResponse {
  bool success = 1;
}
